--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update README
         run: |
-          VERSION=$(cat .version")
+          VERSION=$(cat .version)
           sed -i "s/Version-[0-9]*\.[0-9]*\.[0-9]*/Version-$VERSION/g" README.md
           sed -i "s/badge\/Version-[0-9]*\.[0-9]*\.[0-9]*-/badge\/Version-$VERSION-/g" README.md
           git config --local user.email "action@github.com"
