--- a/requirements.txt
+++ b/requirements.txt
@@ -1,197 +1,60 @@
-abstract_singleton==1.0.1
-aiohttp==3.8.4
-aiosignal==1.3.1
-anyio==3.6.2
-appnope==0.1.3
-asttokens==2.4.0
-async-generator==1.10
-async-timeout==4.0.2
-asynctest==0.13.0
-attrs==23.1.0
-auto_gpt_plugin_template @ git+https://github.com/Significant-Gravitas/Auto-GPT-Plugin-Template@7612a14c629dc64ad870eee4d05850d60e1dd9ce
-autoflake==2.1.1
-backcall==0.2.0
-backoff==2.2.1
-beautifulsoup4==4.12.2
-black==23.3.0
-blis==0.7.9
-cachetools==5.3.0
-catalogue==2.0.8
-certifi==2023.5.7
-cffi==1.15.1
-cfgv==3.3.1
-chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-confection==0.0.4
-coverage==7.2.5
-cryptography==41.0.1
-cssselect==1.2.0
-cymem==2.0.7
-dataclasses-json==0.5.7
-decorator==5.1.1
-deprecation==2.0.7
-distlib==0.3.6
-distro==1.8.0
-dnspython==2.3.0
-docker==6.1.2
-duckduckgo-search==3.0.2
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
-exceptiongroup==1.1.1
-execnet==1.9.0
-executing==1.2.0
-filelock==3.12.0
-flake8==6.0.0
-frozenlist==1.3.3
-ghp-import==2.1.0
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core==2.11.0
-google-api-python-client==2.86.0
-google-auth==2.18.1
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.59.0
--e git+https://github.com/AntonOsika/gpt-engineer.git@d91384c2aa21d3c617d4f7a387c3ad7b4b0823c6#egg=gpt_engineer
-gTTS==2.3.1
-h11==0.14.0
-httpcore==0.17.1
-httplib2==0.22.0
-httpx==0.24.0
-identify==2.5.24
-idna==3.4
-iniconfig==2.0.0
-ipython==8.15.0
-isort==5.12.0
-jedi==0.19.0
-jellyfish==0.11.2
-Jinja2==3.1.2
-jmespath==1.0.1
-jsonschema==4.17.3
-langcodes==3.3.0
-linkedin-scraper==2.11.2
-loguru==0.7.0
-lxml==4.9.2
-Markdown==3.3.7
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mergedeep==1.3.4
-mkdocs==1.4.3
-monotonic==1.6
-multi-rake==0.0.2
-multidict==6.0.4
-murmurhash==1.0.9
-mypy==1.3.0
-mypy-extensions==1.0.0
-networkx==3.1
-nodeenv==1.8.0
-numpy==1.24.3
-oauthlib==3.2.2
-openai==0.27.8
-openapi-python-client==0.13.4
-orjson==3.8.10
-outcome==1.2.0
-packaging==23.1
-parsel==1.8.1
-parso==0.8.3
-pathspec==0.11.1
-pathy==0.10.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-pinecone-client==2.2.1
-platformdirs==3.5.1
-playsound==1.2.2
-pluggy==1.0.0
-pre-commit==3.3.3
-preshed==3.0.8
-prompt-toolkit==3.0.39
-protobuf==4.23.1
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycld2==0.41
-pycodestyle==2.10.0
-pycparser==2.21
-pydantic==1.10.7
-pyflakes==3.0.1
-Pygments==2.16.1
-pylatexenc==2.10
-pymdown-extensions==10.0.1
-pyOpenSSL==23.2.0
-pyparsing==3.0.9
-PyPDF2==3.0.1
-pyrsistent==0.19.3
-PySocks==1.7.1
-pytest==7.3.1
-pytest-asyncio==0.21.0
-pytest-benchmark==4.0.0
-pytest-cov==4.0.0
-pytest-integration==0.2.3
-pytest-mock==3.10.0
-pytest-recording==0.12.2
-pytest-xdist==3.3.1
-python-dateutil==2.8.2
-python-docx==0.8.11
-python-dotenv==0.21.1
-PyYAML==6.0
-pyyaml_env_tag==0.1
-readability-lxml==0.8.1
-redis==4.5.5
-regex==2023.5.5
-requests==2.30.0
-requests-oauthlib==1.3.1
-rsa==4.9
-rudder-sdk-python==2.0.2
-ruff==0.0.272
-segtok==1.5.11
-selenium==4.1.4
-shellingham==1.5.0.post1
+absl-py==2.1.0
+astunparse==1.6.3
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+feedparser==6.0.11
+filelock==3.13.4
+flatbuffers==24.3.25
+fsspec==2024.3.1
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.62.2
+h5py==3.11.0
+huggingface-hub==0.22.2
+idna==3.7
+Jinja2==3.1.3
+keras==3.3.3
+libclang==18.1.1
+lxml==5.2.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+namex==0.0.8
+networkx==3.3
+numpy==1.26.4
+opt-einsum==3.3.0
+optree==0.11.0
+packaging==24.0
+pillow==10.3.0
+protobuf==4.25.3
+Pygments==2.17.2
+PyYAML==6.0.1
+regex==2024.4.16
+requests==2.31.0
+rich==13.7.1
+safetensors==0.4.3
+sentencepiece==0.2.0
+sgmllib3k==1.0.0
 six==1.16.0
-smart-open==6.3.0
-smmap==5.0.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4.1
-spacy==3.5.3
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-srsly==2.4.6
-stack-data==0.6.2
-tabulate==0.9.0
-termcolor==2.3.0
-thinc==8.1.10
-tiktoken==0.3.3
-tqdm==4.65.0
-traitlets==5.10.0
-trio==0.22.0
-trio-websocket==0.10.2
-tweepy==4.14.0
-typer==0.9.0
-types-beautifulsoup4==4.12.0.5
-types-colorama==0.4.15.11
-types-html5lib==1.1.11.14
-types-Markdown==3.4.2.9
-types-Pillow==9.5.0.4
-typing-inspect==0.9.0
-typing_extensions==4.5.0
-uritemplate==4.1.1
-urllib3==1.26.15
-urllib3-secure-extra==0.1.0
-vcrpy @ git+https://github.com/Significant-Gravitas/vcrpy.git@2f6fa05ae3518b1c0e92e63c3d12ecf5cf82cd48
-virtualenv==20.23.0
-w3lib==2.1.2
-wasabi==1.1.1
-watchdog==3.0.0
-wcwidth==0.2.6
-webdriver-manager==3.8.6
-websocket-client==1.5.1
-wrapt==1.15.0
-wsproto==1.2.0
-yake @ git+https://github.com/LIAAD/yake@374fc1c1c19eb080d5b6115cbb8d4a4324392e54
-yarl==1.9.2
+soupsieve==2.5
+sympy==1.12
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.36.0
+termcolor==2.4.0
+tf_keras==2.16.0
+tokenizers==0.19.1
+torch==2.3.0
+torchaudio==2.3.0
+torchvision==0.18.0
+tqdm==4.66.2
+transformers==4.40.1
+typing_extensions==4.11.0
+urllib3==2.2.1
+Werkzeug==3.0.2
+wrapt==1.16.0
